# TimeSeriesAssessments

./: README.md  assessment_1 roberto.ipynb  assessment_1.ipynb  pyproject.toml
Data/: Cathfield_monthly_sales.csv
