[project]
name = "time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "darts>=0.27",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "llvmlite>=0.40.0",
    "matplotlib>=3.7",
    "numba>=0.57.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pmdarima>=2.0",
    "prophet>=1.1",
    "pymannkendall>=1.4.3",
    "pytorch-lightning>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.12",
    "setuptools>=82.0.0",
    "skforecast>=0.11",
    "statsmodels>=0.14",
    "torch>=2.0",
    "tqdm>=4.67.3",
    "wheel>=0.46.3",
    "xgboost>=2.0",
]
